[package]

name = "secp256k1zkp"
version = "0.13.0"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-secp256k1/"
repository = "https://github.com/rust-bitcoin/rust-secp256k1/"
documentation = "https://docs.rs/secp256k1/"
description = "Rust bindings for Pieter Wuille's `libsecp256k1` library; linked against an experimental secp256k1-zkp fork with support for Schnorr signature, MuSig multisignatures etc. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"
build = "build.rs"

# Should make docs.rs show all functions, even those behind non-default features
[package.metadata.docs.rs]
features = [ "rand", "serde", "recovery", "endomorphism", "zeroize", "musig", "sgx" ]
all-features = true

[build-dependencies]
cc = ">= 1.0.28"

[lib]
name = "secp256k1"
path = "src/lib.rs"

[features]
unstable = []
default = ["std"]
fuzztarget = []
std = []
recovery = []
endomorphism = []
musig = []
sgx = []

[target.'cfg(all(not(target_env = "sgx"), feature = "sgx"))'.dependencies]
sgx_tstd = { rev = "5b5e512abbbfc3030e8cb274989fb372b685b168", git = "https://github.com/baidu/rust-sgx-sdk.git" }

[dev-dependencies]
rand = "0.7"
rand_core = "0.5"
serde_test = "1.0"

[dependencies.rand]
version = "0.7"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.zeroize]
version = "1.0"
optional = true
default-features = false
