[package]
name = "webpki-roots"
version = "0.17.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
description = "Mozilla's CA root certificates for use with webpki"
homepage = "https://github.com/ctz/webpki-roots"
repository = "https://github.com/ctz/webpki-roots"

[dependencies]
webpki = { git = "https://github.com/crypto-com/sgx-vendor" }
sgx_tstd = { rev = "5b5e512abbbfc3030e8cb274989fb372b685b168", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
